# cdep

./: .gitignore  .gitmodules  .travis.yml  README.md  boot.yml  bootstrap.yml  build.gradle  cdep  cdep-production  coordinate-resolution.md  settings.gradle  travis_cdep
bootstrap/: build.gradle
bootstrap/.test-files/testLocalFile/: bootstrap.yml
cdep/: build.gradle
cdep/gradle/wrapper/: gradle-wrapper.properties
cdep/src/main/resources/: CMakeLibraryFunctions.cmake
cdep/test-files/localPathsWork/: cdep.yml
cdep/test-files/localPathsWork/.cdep/modules/: cdep-dependencies-config.cmake
cdep/test-files/simpleConfiguration/: cdep.yml
cdep/test-files/simpleDependency/: cdep.yml
cdep/test-files/simpleDependency/.cdep/modules/: cdep-dependencies-config.cmake
cdep/test-files/testWrapper/redist/: cdep.yml
cdep/test-files/testWrapper/working/: cdep  cdep.bat
cdep/test-files/wrongZipHashNotAllowed/: cdep.yml
gradle/wrapper/: gradle-wrapper.properties
integration/: build.gradle
redist/: cdep  cdep.bat
redist/cdep/: cdep
smoke-test/: .cmakeify.yml  CMakeLists.txt  cdep.yml  cmakeify.yml  hello.c
smoke-test/.cdep/examples/cmake/: cmakeify.yml
src/main/java/io/cdep/: ArchiveUtils.java  BuildInfo.java  CDep.java  CDepMain.java  CMakeGenerator.java  ExpressionUtils.java  FileUtils.java  FindModuleFunctionTableBuilder.java  FindModuleInterpreter.java  GeneratorEnvironment.java  GeneratorEnvironmentUtils.java  GithubReleasesCoordinateResolver.java  GithubStyleUrlResolver.java  HashUtils.java  ManifestUtils.java  ResolvedDependency.java  Resolver.java  (+2 more)
(+345 files in other folders)
